[gd_scene load_steps=10 format=3 uid="uid://ce4mrlpag7y26"]

[ext_resource type="Script" path="res://Assets/Components/OverviewPanel/OverviewPanel.gd" id="1_j5o7d"]
[ext_resource type="Texture2D" uid="uid://dy6nwugniqcge" path="res://Assets/Sprites/left.png" id="2_24cb0"]
[ext_resource type="Texture2D" uid="uid://cy8ichxk51g4t" path="res://Assets/Sprites/right.png" id="3_rt16m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mq26k"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.32549)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygwoi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buear"]
content_margin_left = 15.0
content_margin_top = 0.0
content_margin_right = 3.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs3hq"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.32549)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_japxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfb8g"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.32549)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="OverviewPanel" type="Node"]
script = ExtResource("1_j5o7d")

[node name="Objective" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.127
anchor_bottom = 0.127
offset_left = -264.0
offset_top = 98.704
offset_right = 69.0
offset_bottom = 280.704
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mq26k")

[node name="TextureButton" type="TextureButton" parent="Objective"]
layout_mode = 0
offset_left = 294.0
offset_top = 77.0
offset_right = 323.0
offset_bottom = 106.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_24cb0")
texture_pressed = ExtResource("3_rt16m")
stretch_mode = 3

[node name="Panel" type="Panel" parent="Objective"]
layout_mode = 0
offset_left = 24.0
offset_top = 13.0
offset_right = 254.0
offset_bottom = 169.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ygwoi")

[node name="ItemList" type="ItemList" parent="Objective/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 58.0
offset_right = 230.0
offset_bottom = 154.0
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_constants/icon_margin = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_buear")
allow_search = false

[node name="Label" type="Label" parent="Objective/Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 27.0
offset_right = 86.0
offset_bottom = 50.0
text = "Objective"

[node name="Characterpanel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.128
anchor_right = 1.0
anchor_bottom = 0.128
offset_left = -61.0
offset_top = 99.056
offset_right = 271.0
offset_bottom = 280.056
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cs3hq")

[node name="TextureButton" type="TextureButton" parent="Characterpanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 77.0
offset_right = 36.0
offset_bottom = 106.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_rt16m")
texture_pressed = ExtResource("2_24cb0")
stretch_mode = 3

[node name="Panel" type="Panel" parent="Characterpanel"]
layout_mode = 0
offset_left = 73.0
offset_top = 23.0
offset_right = 291.0
offset_bottom = 159.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_japxy")

[node name="Label" type="Label" parent="Characterpanel/Panel"]
layout_mode = 0
offset_left = -3.0
offset_right = 131.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.67451, 0.341176, 0.215686, 1)
text = "Deployed Enemy:"

[node name="Enemy_Count" type="Label" parent="Characterpanel/Panel"]
layout_mode = 0
offset_left = 141.0
offset_right = 164.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.67451, 0.341176, 0.215686, 1)
text = "69"
horizontal_alignment = 1

[node name="Overheadpanel" type="Panel" parent="."]
visible = false
offset_left = 1090.0
offset_top = 136.0
offset_right = 1376.0
offset_bottom = 176.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lfb8g")

[node name="Label" type="Label" parent="Overheadpanel"]
layout_mode = 0
offset_left = 66.0
offset_top = 7.0
offset_right = 180.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.384314, 0.580392, 0.372549, 1)
text = "Deployed Ally:"
horizontal_alignment = 1

[node name="Deployed_Count" type="Label" parent="Overheadpanel"]
layout_mode = 0
offset_left = 182.0
offset_top = 7.0
offset_right = 206.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.384314, 0.580392, 0.345098, 1)
text = "32 "
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Overheadpanel"]
layout_mode = 0
offset_left = 205.0
offset_top = 7.0
offset_right = 216.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.384314, 0.580392, 0.372549, 1)
text = "/"

[node name="Total_Count" type="Label" parent="Overheadpanel"]
layout_mode = 0
offset_left = 212.0
offset_top = 7.0
offset_right = 238.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.384314, 0.580392, 0.372549, 1)
text = "69"
horizontal_alignment = 1

[connection signal="toggled" from="Objective/TextureButton" to="." method="_on_texture_button_toggled"]
[connection signal="toggled" from="Objective/TextureButton" to="." method="_objective_button_toggled"]
[connection signal="toggled" from="Characterpanel/TextureButton" to="." method="_character_button_toggled"]
[connection signal="toggled" from="Characterpanel/TextureButton" to="." method="_on_texture_button_toggled"]
